[tool.poetry]
name = "test-poetry"
version = "0.1.0"
description = "\"testando o poetry init no projeto clonado do GitHub\""
authors = ["Luciano Moraes <lmoraes75@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
